--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <img src="/work-2.jpg" alt="">
   </div>
   <div class="experiencearea1">
-      <img src="work-3.jpg" alt="">
+      <img src="/work-3.jpg" alt="">
   </div>
 
     </section>
