help from forum

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
             <a id="thisisa" target="_blank" href="https://www.linkedin.com/in/sorder-mohammad-al-amin-192368167/">HIRE ME</a>
         </div>
         <div class="textone">
-            <img src="/facebook dp.png" alt="me">
+            <img src="facebook dp.png" alt="me">
         </div>
     </section>
     <section class="biodataofmy">
         <div class="textone0">
-            <img src="/my-bg (1).png" alt="">
+            <img src="my-bg (1).png" alt="">
         </div>  
         <div class="textone0">
             <h1 id="thisish1">My Biography</h1>
@@ -35,13 +35,13 @@
         <p id="mylastest1">My latest Works</p>
         </div> 
     <div class="experiencearea1">
-        <img src="/work-1.png" alt="">
+        <img src="work-1.png" alt="">
   </div>
   <div class="experiencearea1">
-      <img src="/work-2.jpg" alt="">
+      <img src="work-2.jpg" alt="">
   </div>
   <div class="experiencearea1">
-      <img src="/work-3.jpg" alt="">
+      <img src="work-3.jpg" alt="">
   </div>
 
     </section>
